--- a/.env
+++ b/.env
@@ -11,4 +11,8 @@ TILESET_OPTIMIZATION_QUALITY_MAX=1.0
 # Here you can set your upload strategy. Simply comment the option you don't want to use.
 # Learn more by reading the 'Upload your map' section in the README.
 # UPLOAD_MODE=MAP_STORAGE
-UPLOAD_MODE=GH_PAGES
+# ANTERIOR -> UPLOAD_MODE=GH_PAGES 
+UPLOAD_MODE=MAP_STORAGE
+MAP_STORAGE_URL=https://escritorio-virtual-workadventure.1pr4vq.easypanel.host/map-storage
+MAP_STORAGE_API_TOKEN=map123         # (use o mesmo token do compose)
+
